# setVCD

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  devenv.nix  example.ipynb  pyproject.toml
.github/workflows/: pypi.yml  test.yml
setVCD/: __init__.py  setVCD.py  types.py
tests/: __init__.py  test_vcd2set.py
tests/fixtures/: wave.vcd
vcd2set/: __init__.py  types.py  vcd2set.py
